--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "testcase-no-package-lock",
   "version": "0.0.0",
+  "main": "app.js",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
